# maestro

./: .env.template  .gitignore  Dockerfile  LICENSE  README.md  coderabbit.yaml  docker-compose.yml  pyproject.toml  run.py
.github/: dependabot.yml
data/: bpmn_collaboration_01.JSON  bpmn_collaboration_01_ground_truth.MMD
src/maestro/: __main__.py  experiment_config.py  run.py  schemas.py
src/maestro/analysis/: metrics.py
src/maestro/db/: __init__.py  client.py  queries.py
src/maestro/providers/: __init__.py  anthropic.py  base.py  openai.py
src/maestro/strategies/: __init__.py  base.py  init.py  single.py  sop.py
